# InDirectDWG

libredwg/: AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  config.h.in  configure.ac
libredwg/Include/: DbHostAppServices.h  LibreDwgInterface.h  LibreDwgInterface.h~  OdaCommon.h  makefiles.sh
libredwg/Include/Ge/: GeCircArc2d.h
libredwg/src/: LibreDwg.cpp  Makefile.am
