#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([indirectdwg], [0.01], [jamesmikedupont@googlemail.com])
AM_INIT_AUTOMAKE([indirectdwg], [0.01])
LT_INIT
AC_CONFIG_SRCDIR([src/LibreDwg.cpp])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT([
	src/Makefile])
